--- a/templatemo_545_finance_business/services.html
+++ b/templatemo_545_finance_business/services.html
@@ -29,9 +29,9 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
+</head> 
 
-<body>
+<body data-spy="scroll" data-target = ".nav">
 
   <!-- ***** Preloader Start ***** -->
   <div id="preloader">
@@ -104,17 +104,20 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Our Services</h1>
-          <span style="display: flex; align-items: center;margin-left: 25%;">The services we have been providing for the past <span id="timeElapsed" style="margin-left: 5px;font-weight: bolder;font-size: 20px;"> </span>  years</span>
+          <span style="display: flex; align-items: center;margin-left: 25%;">The services we have been providing for the
+            past <span id="timeElapsed" style="margin-left: 5px;font-weight: bolder;font-size: 20px;"> </span>
+             years</span>
         </div>
       </div>
     </div>
   </div>
 
 
+
   <div class="single-services">
     <div class="container">
-      <h1>Services:</h1>
-      <hr>
+      <!-- <h1>Services:</h1> -->
+      <!-- <hr> -->
       <div class="row">
         <div class="col-md-4 mb-5">
           <ul class="nav nav-pills flex-column" id="myTab" role="tablist">
@@ -174,94 +177,103 @@
         </div>
         <div class="col-md-8">
           <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+            <div class="tab-pane fade show active scrollto" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
               <h2>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
               <h2>WASTE SEGREGATION AWARENESS CAMPAIGN</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
               <h2>PUBLIC AWARENESS PROGRAMS</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
               <h2>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
               <h2>COMMUNITY MOBILIZATION</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
               <h2>BUSH REMOVING</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
               <h2>PUBLICATION</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
               <h2>TRAINING</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
               <h2>COMPOSTING</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
               <h2>MARKETING OF COMPOST BINS</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
               <h2>GREENERY DEVELOPMENT</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
               <h2>PAPER RECYCLING</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab13" role="tabpanel" aria-labelledby="tab13-tab">
-              <h2>HEALTH SERVICES</h2>
+              <h2>HEALTH SERVICES</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
@@ -276,7 +288,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
+            <h4>NEPCEMAC</h4>
             <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.
             </p>
             <ul class="social-icons">
@@ -288,14 +300,14 @@
             </ul>
           </div>
           <div class="col-md-3 footer-item">
-            <h4>Useful Links</h4>
+            <!-- <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
               <li><a href="#">Nulla nec cursus elit</a></li>
               <li><a href="#">Vulputate sed nec</a></li>
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
-            </ul>
+            </ul> -->
           </div>
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
